...

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <EditText
                android:id="@+id/activity_create_new_rule_editText_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_toEndOf="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
                android:layout_toRightOf="@+id/activity_create_new_rule_textView_label_for_editText_rule_name"
...

        </RelativeLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/activity_create_new_rule_button_save_rule_name"
        android:layout_width="wrap_content"
        android:src="@drawable/ic_done"
        android:layout_height="wrap_content"
        android:text="@string/general_string_button_save"
        android:visibility="invisible"
        android:layout_alignBottom="@+id/scrollView2"
...
