<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical">


            <TextView
                android:id="@+id/list_item_rule_time_controlled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/list_item_rule_name"
                android:text="TextView" />

            <CheckBox
                android:id="@+id/list_item_is_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/list_item_rule_name"
                android:layout_alignBottom="@+id/list_item_rule_name"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/list_item_rule_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center|left"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dip"
                android:layout_marginTop="2dp"
                android:layout_below="@+id/list_item_rule_time_controlled"
                android:background="#E4E4E4"
                android:id="@+id/view2" />
</RelativeLayout>
